# simple_http_client

./: LICENSE  README.md  pyproject.toml  requirements.txt  version.properties
.github/workflows/: branch_patch_version_bump.yml  branch_tag_release.yml  pylint.yml  python-package.yml  python-publish.yml
src/com_digitalruiz_simple_http_client/: simple_http_client.py
tests/: test_pass.py
