[project]
name = "com_digitalruiz_simple_http_client"
version = "0.0.3"
authors = [
  { name="Reyes Ruiz", email="reyes@digitalruiz.com" },
]
description = "A small package to create and use an http client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'requests',
  'com-digitalruiz-my-logger',
]

[project.urls]
"Homepage" = "https://github.com/reyesruiz/simple_http_client"
"Bug Tracker" = "https://github.com/reyesruiz/my_logger/simple_http_client"
